<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_scores" tools:context="com.parakeet.parakeet.ScoresActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/scores"
        android:id="@+id/scores"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="77.7dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/score1"
        android:id="@+id/score1"
        android:layout_below="@+id/scores"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/score2"
        android:id="@+id/score2"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/score1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/score3"
        android:id="@+id/score3"
        android:layout_below="@+id/score2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/score4"
        android:id="@+id/score4"
        android:layout_below="@+id/score3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/score5"
        android:id="@+id/score5"
        android:layout_below="@+id/score4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/score6"
        android:id="@+id/score6"
        android:layout_below="@+id/score5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/score7"
        android:id="@+id/score7"
        android:layout_below="@+id/score6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/score8"
        android:id="@+id/score8"
        android:layout_below="@+id/score7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/score9"
        android:id="@+id/score9"
        android:layout_below="@+id/score8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/score10"
        android:id="@+id/score10"
        android:layout_below="@+id/score9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/empty_score"
        android:id="@+id/scoreNum1"
        android:layout_alignTop="@+id/score1"
        android:layout_alignLeft="@+id/scores"
        android:layout_alignStart="@+id/scores" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/empty_score"
        android:id="@+id/scoreNum2"
        android:layout_alignTop="@+id/score2"
        android:layout_alignLeft="@+id/scoreNum1"
        android:layout_alignStart="@+id/scoreNum1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/empty_score"
        android:id="@+id/scoreNum3"
        android:layout_alignTop="@+id/score3"
        android:layout_alignLeft="@+id/scoreNum2"
        android:layout_alignStart="@+id/scoreNum2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/empty_score"
        android:id="@+id/scoreNum4"
        android:layout_alignTop="@+id/score4"
        android:layout_alignLeft="@+id/scoreNum3"
        android:layout_alignStart="@+id/scoreNum3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/empty_score"
        android:id="@+id/scoreNum5"
        android:layout_alignTop="@+id/score5"
        android:layout_alignLeft="@+id/scoreNum4"
        android:layout_alignStart="@+id/scoreNum4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/empty_score"
        android:id="@+id/scoreNum6"
        android:layout_alignTop="@+id/score6"
        android:layout_alignLeft="@+id/scoreNum5"
        android:layout_alignStart="@+id/scoreNum5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/empty_score"
        android:id="@+id/scoreNum7"
        android:layout_alignTop="@+id/score7"
        android:layout_alignLeft="@+id/scoreNum6"
        android:layout_alignStart="@+id/scoreNum6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/empty_score"
        android:id="@+id/scoreNum8"
        android:layout_alignTop="@+id/score8"
        android:layout_alignLeft="@+id/scoreNum7"
        android:layout_alignStart="@+id/scoreNum7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/empty_score"
        android:id="@+id/scoreNum9"
        android:layout_alignTop="@+id/score9"
        android:layout_alignLeft="@+id/scoreNum10"
        android:layout_alignStart="@+id/scoreNum10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/empty_score"
        android:id="@+id/scoreNum10"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/scores"
        android:layout_alignStart="@+id/scores" />
</RelativeLayout>
